--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +36,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.552.0",
+    "motion": "^12.23.24",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
