--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@tanstack/react-query": "^5.90.7",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
