--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@tanstack/react-query": "^5.90.7",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
