--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react-dom": "^19",
     "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/coverage-v8": "^4.0.8",
     "@vitest/ui": "^4.0.8",
     "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.6",
