--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:unit:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@better-auth/expo": "^1.3.34",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
