--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.7",
+    "graphql": "^16.12.0",
+    "graphql-yoga": "^5.16.2",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
